--- a/sysdrv/source/kernel/arch/arm/boot/dts/rv1106-luckfox-pico-pro-max-ipc.dtsi
+++ b/sysdrv/source/kernel/arch/arm/boot/dts/rv1106-luckfox-pico-pro-max-ipc.dtsi
@@ -295,26 +295,29 @@
 /*****************************PINCTRL********************************/
 // SPI
 &spi0 {
-	pinctrl-0 = <&spi0m0_clk &spi0m0_miso &spi0m0_mosi &spi0m0_cs0>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&spi0m0_clk &spi0m0_miso &spi0m0_mosi &spi0m0_cs0 &spi0m0_cs1>;
 	#address-cells = <1>;
 	#size-cells = <0>;
-	spidev@0 {
-    compatible = "rockchip,spidev";
-		spi-max-frequency = <50000000>;
-		reg = <0>;
-	};
 
-  fbtft@0{
-    compatible = "sitronix,st7789v";
-    reg = <0>;
-    spi-max-frequency = <20000000>;
-    fps = <30>;
-    buswidth = <8>;
-    debug = <0x7>;
-    led-gpios = <&gpio2 RK_PB0 GPIO_ACTIVE_HIGH>;//BL
-    dc-gpios = <&gpio2 RK_PB1 GPIO_ACTIVE_HIGH>;      //DC
-    reset-gpios = <&gpio1 RK_PC3 GPIO_ACTIVE_LOW>;    //RES
-  };
+
+// 	spidev@0 {
+//     compatible = "rockchip,spidev";
+// 		spi-max-frequency = <50000000>;
+// 		reg = <0>;
+// 	};
+
+//   fbtft@0{
+//     compatible = "sitronix,st7789v";
+//     reg = <0>;
+//     spi-max-frequency = <20000000>;
+//     fps = <30>;
+//     buswidth = <8>;
+//     debug = <0x7>;
+//     led-gpios = <&gpio2 RK_PB0 GPIO_ACTIVE_HIGH>;//BL
+//     dc-gpios = <&gpio2 RK_PB1 GPIO_ACTIVE_HIGH>;      //DC
+//     reset-gpios = <&gpio1 RK_PC3 GPIO_ACTIVE_LOW>;    //RES
+//   };
 };
 // I2C
 &i2c0 {
@@ -396,6 +399,9 @@
 		spi0m0_cs0: spi0m0-cs0 {
 			rockchip,pins = <1 RK_PC0 4 &pcfg_pull_none>;
 		};
+		spi0m0_cs1: spi0m0-cs1 {
+			rockchip,pins = <1 RK_PD2 5 &pcfg_pull_none>;
+		};		
 	};
 
     gpio1-pc7 {
@@ -403,6 +409,16 @@
             rockchip,pins = <1 RK_PC7 RK_FUNC_GPIO &pcfg_pull_none>;
     };
 	};
+    can0_rx_int {
+        can0_rx_int_pin: can0_rx_int_pin {
+            rockchip,pins = <1 RK_PD0 RK_FUNC_GPIO &pcfg_pull_none>;
+        };
+    };	
+	can1_rx_int {
+        can1_rx_int_pin: can1_rx_int_pin {
+            rockchip,pins = <1 RK_PD1 RK_FUNC_GPIO &pcfg_pull_none>;
+        };
+    };	
 };
 
 
