--- a/sysdrv/source/kernel/arch/arm/boot/dts/rv1106g-luckfox-pico-max.dts
+++ b/sysdrv/source/kernel/arch/arm/boot/dts/rv1106g-luckfox-pico-max.dts
@@ -146,7 +146,7 @@
 		spi-max-frequency = <8000000>;
 		interrupt-parent = <&gpio1>;
         interrupts = <RK_PD0 IRQ_TYPE_LEVEL_LOW>;
-        microchip,rx-int = <&gpio1 RK_PD0 GPIO_ACTIVE_HIGH>;
+        microchip,rx-int-gpios = <&gpio1 RK_PD0 GPIO_ACTIVE_HIGH>;
 	};	
 	can1:can@1 {
 		status = "okay";
@@ -157,7 +157,7 @@
 		spi-max-frequency = <8000000>;
 		interrupt-parent = <&gpio1>;
         interrupts = <RK_PD1 IRQ_TYPE_LEVEL_LOW>;
-        microchip,rx-int = <&gpio1 RK_PD1 GPIO_ACTIVE_HIGH>;
+        microchip,rx-int-gpios = <&gpio1 RK_PD1 GPIO_ACTIVE_HIGH>;
 	};	
 
 	// spidev@0 {
