--- a/sysdrv/source/kernel/arch/arm/boot/dts/rv1106g-luckfox-pico-max.dts
+++ b/sysdrv/source/kernel/arch/arm/boot/dts/rv1106g-luckfox-pico-max.dts
@@ -137,27 +137,27 @@
     //     microchip,rx-int = <&gpio1 RK_PD1 GPIO_ACTIVE_HIGH>;
 	// };
 
-	can0:can@0 {
+	can@0 {
 		status = "okay";
 		compatible = "microchip,mcp2518fd,qiyun";
 		reg = <0>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&can0_rx_int_pin>;
-		spi-max-frequency = <8000000>;
+		spi-max-frequency = <20000000>;
 		interrupt-parent = <&gpio1>;
         interrupts = <RK_PD0 IRQ_TYPE_LEVEL_LOW>;
-        microchip,rx-int-gpios = <&gpio1 RK_PD0 GPIO_ACTIVE_HIGH>;
+        microchip,rx-int-gpios = <&gpio1 RK_PD0 GPIO_ACTIVE_LOW>;
 	};	
-	can1:can@1 {
+	can@1 {
 		status = "okay";
 		compatible = "microchip,mcp2518fd,qiyun";
 		reg = <1>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&can1_rx_int_pin>;
-		spi-max-frequency = <8000000>;
+		spi-max-frequency = <20000000>;
 		interrupt-parent = <&gpio1>;
         interrupts = <RK_PD1 IRQ_TYPE_LEVEL_LOW>;
-        microchip,rx-int-gpios = <&gpio1 RK_PD1 GPIO_ACTIVE_HIGH>;
+        microchip,rx-int-gpios = <&gpio1 RK_PD1 GPIO_ACTIVE_LOW>;
 	};	
 
 	// spidev@0 {
