--- a/sysdrv/source/kernel/arch/arm/configs/luckfox_rv1106_linux_defconfig
+++ b/sysdrv/source/kernel/arch/arm/configs/luckfox_rv1106_linux_defconfig
@@ -55,6 +55,9 @@ CONFIG_INET_TABLE_PERTURB_ORDER=8
 CONFIG_IPV6=m
 # CONFIG_IPV6_SIT is not set
 CONFIG_CAN=y
+CONFIG_CAN_ISOTP=y
+CONFIG_CAN_MCP251X=y
+CONFIG_CAN_MCP251XFD=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_ALLOW_DEV_COREDUMP is not set
@@ -343,5 +346,4 @@ CONFIG_DEBUG_INFO=y
 CONFIG_DEBUG_FS=y
 # CONFIG_DEBUG_MISC is not set
 # CONFIG_SCHED_DEBUG is not set
-# CONFIG_FTRACE is not set
 # CONFIG_RUNTIME_TESTING_MENU is not set
